cis-eks/restrict-secret-role-access/bad-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: bad-secret-wildcard
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["*"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: bad-all-resources-wildcard
rules:
- apiGroups: ["*"]
  resources: ["*"]
  verbs: ["*"]
